--- a/retroactive.tex
+++ b/retroactive.tex
@@ -1305,7 +1305,7 @@ following data structures:
 \begin{itemize}
 \item \textit{WAM data structures}: heap, trail, and associated
   registers. The heap is used to build structured terms, in which the
-  subgoal arguments or trie variables are bound. Whenever a term
+  subgoal arguments are bound. Whenever a term
   variable is bound, we trail it using the WAM trail;
 \item \textit{term stack}: stores the remaining terms to be matched
   against the subgoal trie symbols;
