sibling, not next field

--- a/retroactive.tex
+++ b/retroactive.tex
@@ -912,7 +912,7 @@ subgoals \texttt{p(1,VAR0)}, \texttt{p(2,VAR0)} and \texttt{p(VAR0,VAR1)}.
   \label{fig:stst}
 \end{figure}
 
-In terms of implementation, the STST is stored on the \textbf{next} field of the root
+In terms of implementation, the STST is stored on the \textbf{sibling} field of the root
 trie node of the subgoal trie. The time stamp of the answer trie can be accessed by
 using the root answer trie node.
 
