--- a/tese.tex
+++ b/tese.tex
@@ -53,8 +53,8 @@ Engenharia da Universidade do Porto}
 \mbox{}
 
 \prefacesection{Acknowledgments}
-  I would like to thank...
-  
+\input{ack}
+
 \newpage
 \thispagestyle{plain}
 \mbox{}
