--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
 Tabling is a particularly successful resolution mechanism that overcomes some limitations
-of the SLD resolution method found in Prolog systems dealing with recursion and redundant
+of the SLD resolution method found in Prolog systems, namely, dealing with recursion and redundant
 sub-computations. In tabling, first calls to tabled subgoals are evaluated through
 program resolution, while \emph{similar calls} are evaluated by consuming answers stored
 in the table space by the corresponding similar subgoal.
@@ -14,13 +14,14 @@ reuse, its efficient implementation is harder than variant-based tabling, which 
 with variant checks much more popular in the logic community.
 
 This thesis first addresses the design and integration of the Time-Stamped Tries mechanism
-from XSB Prolog into the YapTab tabling engine. Our performance results show that our integration efforts
-were successful, with comparable speedups when using subsumptive-tabling against variant-tabling.
+from SLG-WAM tabling engine into the YapTab tabling engine. Our performance results show that our
+integration efforts were successful, with comparable speedups when using subsumptive-tabling agains
+variant-tabling.
 
 In the second part of this thesis we present the design and evaluation of a novel extension
-based around subsumption-based tabling called Retroactive Call Subsumption (RCS). It overcomes some limitations
+based on subsumption-based tabling called Retroactive Call Subsumption (RCS). It overcomes some limitations
 of traditional call subsumption, namely, the fact that the call order of the subgoals can greatly affect its
 success and applicability. RCS allows full sharing of answers,
 independently of the order they are called by selectively pruning and restarting the evaluation of subsumed
 subgoals. Our results show considerable gains for programs that can take advantage of RCS, while programs
-that do not benefit from it show a small enough overhead for the new mechanisms.
+that do not benefit from it show a small overhead using the new mechanisms.
