--- a/tese.tex
+++ b/tese.tex
@@ -80,10 +80,10 @@ Engenharia da Universidade do Porto}
 \input{introduction}
 
 \chapter{Logic Programming and Tabling}
-\input{state}
+\input{lp_tabling}
 
 \chapter{Table Space Organization}
-\input{chapter_3}
+\input{table_space}
 
 \chapter{Time Stamped Tries}
 \input{tst}
